<resources>
    <string name="app_name">News App</string>
    <string name="no_books_found">No Books Found</string>
    <string name="device_offline">Could not connect to network</string>
    <string name="guardian_api_key">test</string>
    <string name="menu_title">Book List</string>
    <string name="search_hint">Search a book...</string>
    <string name="dismiss_popup">Return</string>
    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">News App Settings</string>

    <string name="settings_min_date_label">Minimum News Date</string>
    <string name="settings_min_date_default_value" translatable="false">2017-07-15</string>
    <string name="settings_min_date_key" translatable="false">minimum_date</string>

    <string name="settings_select_section_label">Section Selected</string>
    <string name="settings_select_section_default_value" translatable="false">technology</string>
    <string name="settings_select_section_key" translatable="false">select_section</string>

    <string-array name="settings_select_section_labels">
        <item>Technology</item>
        <item>Environment</item>
        <item>Politics</item>
    </string-array>

    <string-array name="settings_select_section_values">
        <item>technology</item>
        <item>environment</item>
        <item>politics</item>
    </string-array>
</resources>
